--- a/_posts/2022-06-20-INMEDIA-失蹤少女-燕琳-短片取消放映-鮮浪潮導演自發讀劇本-以另一種方式帶入戲院.html
+++ b/_posts/2022-06-20-INMEDIA-失蹤少女-燕琳-短片取消放映-鮮浪潮導演自發讀劇本-以另一種方式帶入戲院.html
@@ -8,24 +8,24 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/18_7.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>以失蹤少女「燕琳」為背景的短片《Time, and Time Again》，因未能在放映前獲發「核准證明書」，成為今屆鮮浪潮電影節暫時唯一未能在戲院上映的本地短片。在昨晚放映的兩場節目，有三名本地導演於映後談讀出電影劇本選段。劇本提及探員調查失蹤少女燕琳的案件被上司阻止，探員質疑：「咁都叫無可疑？你咁講我都會繼續查落去。」而劇本尾聲，探員向燕琳說：「記住，呢個世界好荒謬，如果你改變唔到啲咩，相信你自己做嘅嘢，無論你去到邊度都好，你都會自由。」</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/18_7.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>以失蹤少女「燕琳」為背景的短片《Time, and Time Again》，因<a href="https://bit.ly/3mVQuyP">未能在放映前獲發「核准證明書」</a>，成為今屆鮮浪潮電影節暫時唯一未能在戲院上映的本地短片。在昨晚放映的兩場節目，有三名本地導演於映後談讀出電影劇本選段。劇本提及探員調查失蹤少女燕琳的案件被上司阻止，探員質疑：「咁都叫無可疑？你咁講我都會繼續查落去。」而劇本尾聲，探員向燕琳說：「記住，呢個世界好荒謬，如果你改變唔到啲咩，相信你自己做嘅嘢，無論你去到邊度都好，你都會自由。」</p>
 <p>其中一名導演向《獨媒》表示，在香港拍攝短片本已很困難，對同行作品未能放映感可惜，望幫忙將無法上映的短片「帶入戲院畀觀眾」。至於《Time》的監製和攝影則於映後談讀出導演聲明，指「『燕琳』呢個名引申出嚟嘅關注，純粹眾人自己嘅猜測。其實正正就係自我審查緊。」</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/utmDVp" title="photo_2022-06-20_16-47-15"><img src="https://live.staticflickr.com/65535/52159773583_1451d8aeef.jpg" width="500" alt="photo_2022-06-20_16-47-15" /></a><br /><em>「生者如斯」映後談</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/utmDVp" title="photo_2022-06-20_16-47-15"><img src="https://live.staticflickr.com/65535/52159773583_1451d8aeef.jpg" width="500" alt="photo_2022-06-20_16-47-15" /></a><em>「生者如斯」映後談</em></p>
 <p><strong>三導演映後談讀劇本選段 探員欲查失蹤少女被上司阻止</strong></p>
 <p>《Time, and Time Again》原定昨晚於「委曲求存還是逆命而行」節目放映，惟因尚未獲發「核准證明書」而未能上映。在昨晚另外兩場節目「生者如斯」及「付出才有愛」中，三名本地導演於映後談讀出電影劇本選段。</p>
 <p>《防止自殺手冊》導演王嘉諾和《餘燼》導演潘敏逸<a href="https://www.facebook.com/jessiepyt/videos/2217042878461262/">讀出</a>劇本第一至三場，指希望將作品以另一種方式帶入戲院給觀眾。劇本提及探員調查失蹤少女「燕琳」的案件，惟警方已結案並指燕琳已死，案件「無可疑」。探員向上司表示「單case佢哋唔可以就咁close file」，惟上司回應「係我批准佢哋close file，你都無謂嘥心機，你唔會搵得返佢。」探員質疑：「咁都叫無可疑？查都未查完你就知冇料到？你咁講我都會繼續查落去。」</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/9i63Q3" title="20220424_183957_mLm1J9jfpB_p_600_500"><img src="https://live.staticflickr.com/65535/52154327648_1b0a717e34_z.jpg" width="600" alt="20220424_183957_mLm1J9jfpB_p_600_500" /></a><br /><em>《Time, and Time Again》劇照</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/9i63Q3" title="20220424_183957_mLm1J9jfpB_p_600_500"><img src="https://live.staticflickr.com/65535/52154327648_1b0a717e34_z.jpg" width="600" alt="20220424_183957_mLm1J9jfpB_p_600_500" /></a><em>《Time, and Time Again》劇照</em></p>
 <p>《愛的輪候碼》導演王韻詩，則<a href="https://www.facebook.com/littlesam/videos/559929125533883/">讀出</a>劇本接近尾聲的一場戲。其中探員向另一名女角君雅說：「唔好意思，我應該同埋你一齊去，我應該盡力救你。」君雅回應：「你盡咗力，無論結果係點都好，你有嘗試過，咁就有意義。」</p>
 <p>探員又向燕琳說：「我冇辦法留喺你身邊，好對唔住。」燕琳搖頭，探員續說：「記住，呢個世界好荒謬，如果你改變唔到啲咩，相信你自己做嘅嘢，無論你去到邊度都好，你都會自由。」</p>
 <p><strong>王彥博指對「燕琳」角色名關注「正正就係自我審查」</strong></p>
 <p>至於昨晚的「委曲求存還是逆命而行」節目，雖《Time, and Time Again》取消放映，但該片的監製和攝影亦有出席映後談，並讀出導演王彥博的聲明，指現時不少討論着眼於「燕琳」的角色名，但其實當局並無指出片段有何問題，「『燕琳』呢個名引申出嚟嘅關注，純粹眾人自己嘅猜測。其實正正就係自我審查緊。」</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/H6706U" title="signal-2022-06-20-143841"><img src="https://live.staticflickr.com/65535/52160356760_344eba31df_z.jpg" width="640" alt="signal-2022-06-20-143841" /></a><br /><em>「委曲求存還是逆命而行」映後談</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/H6706U" title="signal-2022-06-20-143841"><img src="https://live.staticflickr.com/65535/52160356760_344eba31df_z.jpg" width="640" alt="signal-2022-06-20-143841" /></a><em>「委曲求存還是逆命而行」映後談</em></p>
 <p><strong>導演：創作艱難、對取消放映感可惜 讀劇以正視審查不公</strong></p>
 <p>有份讀出劇本的王嘉諾向《獨媒》表示，在香港創作和拍攝短片一向很困難，資源、製作、發行等都有許多限制，鮮浪潮難得予機會年輕人創作，但最後《Time, and Time Again》卻在沒有原因下無法放映，感到很可惜，「好想幫到手做一啲嘢」，故與潘敏逸自發在映後談朗讀觸動自己的劇本選段，望將短片帶入戲院給觀眾。</p>
 <p>為同行發聲，他指「唔敢話唔擔心」影響自己創作路，但更擔心現時電影創作空間收窄。他又指，讀劇本時無人離場，讀完後觀眾亦拍手支持，相信他們對此也表示鼓勵。</p>
 <p>王韻詩則表示，是次審查問題嚴重，「今日係電影，他日可以係其他藝術範疇嘅作品被禁」，甚至擴至人們的生活。她不希望將來變得麻木、「咩都唔再講」，或活在自我審查的恐懼中惶惶度日，故望以讀劇方式，讓人「正視審查制度嘅不公」。</p>
 <p>早前11名本地導演已就事件<a href="https://bit.ly/3zQ982K">聯署發聲明</a>，批評電檢處不止一次拖延發放審批「無疑等同無需理由地禁播」，空泛模糊的審批條件亦令電影人無所適從，使他們的努力付諸流水，促電檢處盡快回覆審批結果並解釋延遲原因，「勿再以『拖字訣』抹殺影片放映的機會」。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/131NX3" title="20220424_184008_UpSfbJdoSB_p_600_500"><img src="https://live.staticflickr.com/65535/52154324606_95983387ed_z.jpg" width="600" alt="20220424_184008_UpSfbJdoSB_p_600_500" /></a><br /><em>《Time, and Time Again》劇照</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/131NX3" title="20220424_184008_UpSfbJdoSB_p_600_500"><img src="https://live.staticflickr.com/65535/52154324606_95983387ed_z.jpg" width="600" alt="20220424_184008_UpSfbJdoSB_p_600_500" /></a><em>《Time, and Time Again》劇照</em></p>
 <p>以下為據現場片段的劇本內容節錄：</p>
 <p><strong>第一場</strong></p>
 <p>一名老練的中年探員在人去樓空的辦公室，獨自對着牆上釘滿資料和證據的水松板俯視，他正在調查一宗連環綁架案，板上有幾個少女的資料和數則篇幅很短的失蹤新聞。Max電話響起，一名聯絡人「燕琳」傳送了她的位置，Max覺得奇怪，拿起佩槍和外套離去。</p>
