--- a/_posts/2022-06-20-INMEDIA-涉因反疫苗呼籲慢駛-售貨員認罪-求情指活動前兩天已主動宣布取消.html
+++ b/_posts/2022-06-20-INMEDIA-涉因反疫苗呼籲慢駛-售貨員認罪-求情指活動前兩天已主動宣布取消.html
@@ -8,14 +8,14 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/21_11.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>一名38歲男售貨員涉去年11月於Telegram呼籲上街集結及駕車慢駛，被控一項煽惑他人參與未經批准集結罪及一項煽惑他人導致公眾地方遭受阻礙罪，他今（20日）在九龍城裁判法院承認兩罪。被告於警誡下稱：「因為反疫苗所以先呼籲吓啲人出黎示威，最後都無人出黎」。辯方於求情時提及，被告於活動前兩天已宣布取消，最終沒有人響應示威。署理主任裁判官黃雅茵將案押後至7月5日判刑，以待索取背景報告，期間被告還押。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/21_11.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>一名38歲男售貨員涉去年11月於 Telegram 呼籲上街集結及駕車慢駛，被控一項煽惑他人參與未經批准集結罪及一項煽惑他人導致公眾地方遭受阻礙罪，他今（20日）在九龍城裁判法院承認兩罪。被告於警誡下稱：「因為反疫苗所以先呼籲吓啲人出黎示威，最後都無人出嚟。」辯方於求情時提及，被告於活動前兩天已宣布取消，最終沒有人響應示威。署理主任裁判官黃雅茵將案押後至7月5日判刑，以待索取背景報告，期間被告還押。</p>
 <p>被告李誠熙（38歲，售貨員），承認一項煽惑他人參與未經批准集結罪及一項煽惑他人導致公眾地方遭受阻礙罪。</p>
 <p><strong>辯方求情：涉案群組並非由被告成立</strong></p>
-<p>辯方求情時稱，涉案的Telegram群組並非由被告成立，他只是被加入成為管理員。被告愚蠢地轉發帖文，亦在舉行活動前兩天已主動取消示威，最後無人參與該次活動，沒有證據證明該群組的影響力大。辯方亦呈上多封求情信，並指被告有悔意，且沒有造成重大影響，望法庭予以輕判。</p>
+<p>辯方求情時稱，涉案的 Telegram 群組並非由被告成立，他只是被加入成為管理員。被告愚蠢地轉發帖文，亦在舉行活動前兩天已主動取消示威，最後無人參與該次活動，沒有證據證明該群組的影響力大。辯方亦呈上多封求情信，並指被告有悔意，且沒有造成重大影響，望法庭予以輕判。</p>
 <p><strong>案情指群組批評疫苗接種及「安心出行」規定</strong></p>
-<p>案情指出，有人發起於去年11月20日舉辦世界自由集會示威，以抵制新冠病毒的防疫措施，而各地的市民需自行舉辦示威。於11月14日，有人建立「世界自由集會（香港）」的Telegram公開群組，群眾主要批評疫苗接種計劃及「安心出行」的規定。被告為群組的活躍管理員，而群組內曾有管理員及成員呼籲市民上街及慢駛，以阻塞交通。</p>
+<p>案情指出，有人發起於去年11月20日舉辦世界自由集會示威，以抵制新冠病毒的防疫措施，而各地的市民需自行舉辦示威。於11月14日，有人建立「世界自由集會（香港）」的 Telegram 公開群組，群眾主要批評疫苗接種計劃及「安心出行」的規定。被告為群組的活躍管理員，而群組內曾有管理員及成員呼籲市民上街及慢駛，以阻塞交通。</p>
 <p><strong>被告於警誡下稱：因反疫苗故呼籲人示威</strong></p>
-<p>被告於12月8日被捕，並於警誡下稱：「我都係因為反疫苗所以先呼籲吓啲人出黎示威，最後都無人出黎」。警方檢取被告的電話後，發現已連接涉案的Telegram帳戶。對話顯示被告曾於11月15至18日，呼籲他人參與港島區的未經批准集結；亦於18至20日呼籲司機響咹及慢駛，引致港島區交通擠塞。</p>
+<p>被告於12月8日被捕，並於警誡下稱：「我都係因為反疫苗所以先呼籲吓啲人出黎示威，最後都無人出嚟。」警方檢取被告的電話後，發現已連接涉案的 Telegram 帳戶。對話顯示被告曾於11月15至18日，呼籲他人參與港島區的未經批准集結；亦於18至20日呼籲司機響咹及慢駛，引致港島區交通擠塞。</p>
 <p>被告於11月18日宣布取消活動，但他仍然呼籲人慢駛。他在警誡會面下亦承認，對於集會未經警方批准而擔心受《國安法》影響，並建議市民使用零錢乘搭交通工具，以避過警方調查。</p>
 <p>被告被控於2021年11月15日與11月18日，在香港煽惑他人參與將於同月20日在港島舉行的未經批准的集結，以及於11月15日至20日，煽惑他人同日在港島的道路上慢駛導致車道遭受阻礙。</p>
 <p>案件編號：KCCC992/2022</p>
