--- a/_posts/2022-06-20-INMEDIA-聶德權不在新班子名單-議員建議-轉跑道-參選入立會.html
+++ b/_posts/2022-06-20-INMEDIA-聶德權不在新班子名單-議員建議-轉跑道-參選入立會.html
@@ -19,7 +19,7 @@ author: 獨媒報導
 <p><strong>黎楝國邀聶德權參選立法會 </strong></p>
 <p>多名議員在會上向聶德權致謝，選委界黎楝國稱「非常懷念聶局長」，並「希望你唔好休息咁耐」，繼續在不同崗位貢獻香港。同樣是「過來人」的黎楝國，問聶德權「唔知你會唔會興趣，考慮吓參選立法會議員呢？」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6231k5" title="無標題"><img src="https://live.staticflickr.com/65535/52159471808_d54884dbbd_3k.jpg" width="3072" alt="無標題" /></a><em>前保安局局長黎棟國</em></p>
-<p>言歸正轉時，黎楝國才發現自己的提問原來是下一項議程才討論，黎楝國推說：「因為唔知點解我呢度，撳入去個文件呢⋯佢係⋯」，委員會主席郭偉強打斷黎楝國，指是因為局方沒有發出新文件，今次議程是上次續會事項，故以舊文件討論。</p>
+<p>言歸正轉時，黎楝國才發現自己的提問原來是下一項議程才討論，黎楝國推說：「因為唔知點解我呢度，撳入去個文件呢⋯⋯佢係⋯⋯」，委員會主席郭偉強打斷黎楝國，指是因為局方沒有發出新文件，今次議程是上次續會事項，故以舊文件討論。</p>
 <p>工聯會黃國在發言時亦向聶德權奉承一番，感謝他任職期間與工聯會溝通，亦希望將接替聶德權職位，現任公務員事務局常任秘書長楊何蓓茵，會繼續與工聯會保持良好溝通。黃國又忽然說：「祝你退休生活呀，最緊身體健康開開心心」，咪高風錄到有人反問：「退休喇咩？」背後亦傳來一陣笑聲。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/9250NA" title="無標題"><img src="https://live.staticflickr.com/65535/52159471743_b72b757f1e_k.jpg" width="2048" alt="無標題" /></a><em>工聯會黃國</em></p>
 <p><strong>公務員事務局舊人新人同場 </strong></p>
