Update VOCUS 2022-06-21 patch

--- a/_posts/2022-06-20-VOCUS-圖解傳統口袋戰術與閃電戰的差異.html
+++ b/_posts/2022-06-20-VOCUS-圖解傳統口袋戰術與閃電戰的差異.html
@@ -8,4 +8,31 @@ tags: blog
 author: 王臻明
 ---
 
-<p><br></p>
+<p>是說二戰時德國以機械化部隊，成功進行閃電戰以後，這種以高度機動化為基礎的新型戰術，就開始廣為人知，也受到許多國家的重視。但多數人對於閃電戰的認知，其實有一點錯誤，並不是速度快就叫閃電戰，不一定要使用可以高速前進的裝甲車輛，才能進行閃電戰。這最好的反例就是太平洋戰爭時，日軍將領山下奉文以腳踏車隊所組成的奇襲部隊，奪下新加坡，也被視為是一次閃電戰的成功典範。所以閃電戰的重點，並不在於使用的裝備，而是戰術觀念。</p>
+<img src="https://images.vocus.cc/9b955de9-941e-4ca8-971c-e18802ea1a5a.png" alt="日軍在太平洋戰爭時的腳踏車閃電戰部隊。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">日軍在太平洋戰爭時的腳踏車閃電戰部隊。</figcaption>
+<p>此次的烏克蘭戰爭，就出現了一個最好的反例，俄羅斯擁有裝備完整的機械化部隊，其營級戰鬥群更是專為高速機動作戰而設計的單位，最後卻在烏克蘭北部戰場上一敗塗地，只能退回到烏克蘭的東部與南部，打最傳統的口袋戰術。甚至口袋戰術還屢屢失敗。在拙作「烏克蘭戰爭爆發百日後為何為陷入僵局」一文中有大略說明了一下，目前烏克蘭戰爭的發展情況，與俄軍為何放棄閃電戰，改採最古老的口袋戰術。</p>
+<h3><a href="https://voicettank.org/%E7%83%8F%E5%85%8B%E8%98%AD%E6%88%B0%E7%88%AD%E7%88%86%E7%99%BC%E7%99%BE%E6%97%A5%E5%BE%8C%E7%82%BA%E4%BD%95%E6%9C%83%E9%99%B7%E5%85%A5%E5%83%B5%E5%B1%80/">王臻明：烏克蘭戰爭爆發百日後為何會陷入僵局？ - 思想坦克｜Voicettank</a></h3><span>俄羅斯入侵烏克蘭已超過百日，戰事仍在持續中，俄羅斯並沒有依照戰前的計畫快速控制首都基輔，成立傀儡政權，反而撤離在烏克蘭北部的部隊，將戰事聚焦在烏克蘭東部與南部地區。因為俄羅斯終於承認現實，瞭解俄軍並不是一支精銳勁旅，難以進行現代化戰爭。奪取制空權失敗，空中打擊失敗，空降軍斬首失敗，營級戰術群的閃電戰也失敗，只是展開了沒有戰果的戰線，消耗龐大的資源。因此放棄戰前的魯莽計畫，改採穩紮穩打的戰術，...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fvoicettank.org%2Fwp-content%2Fuploads%2F2022%2F06%2F%25E7%2583%258F%25E4%25BF%2584%25E6%2588%25B0-AP22128693822207-scaled.jpg&width=550&sign=OzEUKOR1gEDfmlLguIevgtjyAnQmvx3DtESYgWn2Umo">
+<p>不過要進一步說明傳統口袋戰術與閃電戰的不同，用文字是比較難理解的，因此這裡改用圖示的方法。以紅色箭頭來代表攻方，而以黑色線條來代表防守方的各道防線，以最典型的攻守情況，來做為說明。</p>
+<img src="https://images.vocus.cc/dfd42725-9ed9-4be5-a339-667dd5ca7075.png" alt="圖一：傳統口袋戰術。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">圖一：傳統口袋戰術。</figcaption>
+<p>圖一，在雙方開始交戰之前，黑色的防守方設下了多道防線，並將指揮所設在防線的最後方。而攻擊方則有多個主力，分別擔任攻擊箭頭。雙方在開闊的戰場上短兵相接，在這裡暫時不考慮地型或其它的因素。</p>
+<img src="https://images.vocus.cc/9ba5dbe2-7e85-4375-bd08-97b2ef5096fd.png" alt="圖二：傳統口袋戰術。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">圖二：傳統口袋戰術。</figcaption>
+<p>圖二、在傳統的口袋包圍戰術中，攻擊方的其中一個主力在打出缺口後，第一件事是轉向敵方防線的側翼或後面，配合其它的攻擊箭頭，形成夾擊之勢，以擴大戰果。這時防守方的第一道防線，就面臨了一個抉擇。繼續堅守會被包圍，若不想被包圍，就得快點撤退。如果第一道防線的部隊選擇撤退，以保留戰力，那攻擊方就完成了第一次的突破，在第一道防線打開了一個缺口。</p>
+<img src="https://images.vocus.cc/d867769d-d97b-407c-9b89-36238188ff50.png" alt="圖三：傳統口袋戰術。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">圖三：傳統口袋戰術。</figcaption>
+<p>圖三、萬一防守方沒有撤退，或是來不及完全撤離，在第一道防線遭前後夾擊之下，很快就會被打出第二道缺口，讓攻擊方可以包圍這條防線上的守軍，最後不是圍殲這些守軍部隊，就是守軍部隊投降。當然歷史上也有守軍部隊可以堅守到奇蹟出現，等到友軍救援，但這其實需要一些客觀條件的配合，才有機會。在大多數時候，這種情況都不會發生。</p>
+<img src="https://images.vocus.cc/5cbb23d4-f560-44d2-ad32-96cfab4a0108.png" alt="圖四：傳統口袋戰術。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">圖四：傳統口袋戰術。</figcaption>
+<p>圖四、一旦防守方第一道防線上的部隊撤退，或是被包圍殲滅後，攻擊方就打開了一個安全的正面，可以繼續進軍，最多就是留下側翼警戒的少數部隊。主力可以朝防守方的下一道防線推進。繼續這種「突破、包圍、殲滅」的戰術。</p>
+<img src="https://images.vocus.cc/5c0d8dd3-d5f7-47c5-8f3b-f78776355c5f.png" alt="圖五：閃電戰的戰術。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">圖五：閃電戰的戰術。</figcaption>
+<p>圖五、閃電戰的作法則完全不同，在突破第一道防線以後，並不轉向第一道防線的側翼或後方，與友軍夾擊第一道防線上的守軍，打開更大的缺口。反而直接衝向第二道防線，兵貴神速，最好在第二道防線上的守軍還沒有意識到第一道防線已經被突破時，就發動攻擊，讓第二道防線上的守軍措手不及。</p>
+<img src="https://images.vocus.cc/cacd00e5-788f-44dd-acef-ddd9ec89953a.png" alt="圖六：閃電戰的戰術。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">圖六：閃電戰的戰術。</figcaption>
+<p>圖六、快速突破第二道防線以後，一樣繼續向前深入，馬上以迅雷不及掩耳的速度來攻擊第三道防線。如果速度夠快，越後方的防線因為準備不及，往往越容易被攻破。但是攻擊方孤軍深入，也會陷入危險之中，如果防守方是經驗豐富、處變不驚的善戰勁旅，那很可能會立刻合圍，而讓發動閃雷戰的攻擊方，反而陷入被包圍的窘境中。所以發動閃電戰需要良好的協調能力，能快速發動攻擊，快速移動，否則就會像烏克蘭戰場上的俄軍一樣，在戰爭前期常被截斷補給線，在缺乏油料、彈藥與食物下，只能丟棄裝備逃離戰場。</p>
+<img src="https://images.vocus.cc/48ab9fbc-a9fa-4631-81aa-4e0d0f1b7c0b.png" alt="圖七：閃電戰的戰術。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">圖七：閃電戰的戰術。</figcaption>
+<p>圖七、當攻擊方順利突破防守方的第三道防線，就可以依事前的情報，直撲防守方的指揮所、後勤支援點，一旦成功摧毀敵方的指揮系統、後勤支援，則敵方仍然大致完整的三道防線，就會陷入群龍無守、一片慌亂的情況，快速崩潰。這時友軍就能不費吹灰之力，破壞整個防線，取得這場戰役的勝利。俄羅斯一開始的計畫，就是希望像這樣，快速突破烏克蘭的多條防線，直接攻擊基輔，一舉瓦解烏克蘭的指揮中樞，讓烏軍陷入混亂中，可惜最後俄軍以完全失敗收場。</p>
+<p>所以從這幾個例子，我們可以得到一個結論，要成功發動閃電戰的關鍵，在積極主動的基層官兵，這樣才能快速在戰場上解決問題，不斷推進。而還極度仰賴後方指揮系統下令的部隊，是絕對難以發動閃電戰的。同時還要有被包圍的心理準備，所以需要負責且專業、臨陣不亂的士兵。而俄軍在遇到烏軍迂迴包圍時，往往驚慌失措，丟棄裝備逃跑，是他們在第一階段作戰徹底失敗的主因。最後是事前的情報蒐集非常重要，否則就算成功打開了敵方防線的缺口，部隊也不知道後面的第二道、第三道防線情況，指揮所與後勤支援點在哪裡，難以快速摧毀敵方的指揮與後勤系統，讓閃電戰變成一場災難。</p>
