--- a/_posts/2022-06-20-VOCUS-歌舞伎-生田斗真-偶像挑戰歌舞伎.html
+++ b/_posts/2022-06-20-VOCUS-歌舞伎-生田斗真-偶像挑戰歌舞伎.html
@@ -40,6 +40,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/99d2147b-ada9-4a3f-95cc-c3dcda6d99d5.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">電影拍攝的是生田斗密集練習到彩排的2個半月的紀錄，故我認為作為幫朋友的歌舞伎團宣傳和銷售的可能性比較大。但用高中時代的約定這點來包裝異業合作這點，其實還滿不錯的。並且電影內容並沒有失焦在演員光環，演出和歌舞伎的訓練到公演的經過配合綜藝節目的節奏，有著不錯吸睛度。</div>
 <div class="draft-block draft--p left">除了《歌、舞、伎：生田斗真》紀錄片外，裡面演出的《赤胴鈴之助》也同步登上串流平台，可以讓大家看到現場演出。雖然本片觀影體驗還不錯，但對於最後環節的對談內容，就顯得讓人有些尷尬，還好有親情牌救場，不然可能毀掉整部以偶像跟歌舞伎連動的紀錄電影。</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/dBZYzlDxwIw"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/dBZYzlDxwIw"></iframe></div>
