--- a/_posts/2022-06-20-PQ-硬拗-柯文哲稱蓋金廈大橋可視作反攻大陸-鄭運鵬-笑話一則.html
+++ b/_posts/2022-06-20-PQ-硬拗-柯文哲稱蓋金廈大橋可視作反攻大陸-鄭運鵬-笑話一則.html
@@ -24,7 +24,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/01/63989daa-國台辦發言人朱鳳蓮。圖／直播截圖。-1024x430.jpg" alt="" class="wp-image-90377" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/01/63989daa-國台辦發言人朱鳳蓮。圖／直播截圖。-1024x430.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/01/63989daa-國台辦發言人朱鳳蓮。圖／直播截圖。-300x126.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/01/63989daa-國台辦發言人朱鳳蓮。圖／直播截圖。-768x323.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/01/63989daa-國台辦發言人朱鳳蓮。圖／直播截圖。.jpg 1331w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國長期以來都以交流為名，想要統戰台灣；另一方面卻設立飛彈，形成中台關係的緊張。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/01/63989daa-國台辦發言人朱鳳蓮。圖／直播截圖。-1024x430.jpg" alt="" class="wp-image-90377" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/01/63989daa-國台辦發言人朱鳳蓮。圖／直播截圖。-1024x430.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/01/63989daa-國台辦發言人朱鳳蓮。圖／直播截圖。-300x126.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/01/63989daa-國台辦發言人朱鳳蓮。圖／直播截圖。-768x323.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/01/63989daa-國台辦發言人朱鳳蓮。圖／直播截圖。.jpg 1331w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國長期以來都以交流為名，想要統戰台灣；另一方面卻設立飛彈，形成中台關係的緊張。</figcaption></figure></div>
 
 
 
