--- a/_posts/2022-06-21-PQ-錄音檔再曝-衛生局失聯26分鐘-消防局未說明病患-意識不清-釀悲劇.html
+++ b/_posts/2022-06-21-PQ-錄音檔再曝-衛生局失聯26分鐘-消防局未說明病患-意識不清-釀悲劇.html
@@ -24,7 +24,7 @@ author: 麥聊
 
 
 
-<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/a1c9da92-1021x768_265027167698.jpeg" alt="" class="wp-image-104858" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/a1c9da92-1021x768_265027167698.jpeg 1021w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/a1c9da92-1021x768_265027167698-300x226.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/a1c9da92-1021x768_265027167698-768x578.jpeg 768w" sizes="(max-width: 766px) 100vw, 766px" /><figcaption>林先生悲痛質疑，衛生局是否沒有24小時值班人員？為什麼消防局人員沒有清楚告知，恩恩已經「意識不清」？<br>（圖／中央社）</figcaption></figure></div>
+<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/71ecba06-911x768_20220613000020.jpeg" alt="" class="wp-image-105143" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/71ecba06-911x768_20220613000020.jpeg 911w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/71ecba06-911x768_20220613000020-300x253.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/71ecba06-911x768_20220613000020-768x647.jpeg 768w" sizes="(max-width: 683px) 100vw, 683px" /><figcaption>林先生悲痛質疑，衛生局是否沒有24小時值班人員？為什麼消防局人員沒有清楚告知，恩恩已經「意識不清」？<br>（圖／中央社）</figcaption></figure></div>
 
 
 
