Update VOCUS 2022-06-22 patch

--- a/_posts/2022-06-21-VOCUS-北門鐵道部園區一日遊-大日本帝國時期的海外鐵道.html
+++ b/_posts/2022-06-21-VOCUS-北門鐵道部園區一日遊-大日本帝國時期的海外鐵道.html
@@ -31,9 +31,6 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/acb78b93-38c7-4db5-9777-f733aa4eb4b1.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">這次很感謝有空陪外拍的泓名、庭瑄！​</div>
 <div class="draft-block draft--p left">​影片有我跟泓名的攝影取景 PK 賽，歡迎到影片底下留言告訴我們，你們覺得誰才是攝影天才 📷​，歡迎到影片底下留言！</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/M-A1mTZFDfM"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/M-A1mTZFDfM"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">我是臺灣歷史主題的小說創作者，喜愛分享歷史、文學小知識給大家！歡迎訂閱我的 <a href="https://www.youtube.com/channel/UCG-GytKfJ_VJHdrzVCs32Yg" target="_blank" class="draft--a">Youtube 頻道「熬夜的便當」</a>以及 <a href="https://www.instagram.com/pan.yutang/" target="_blank" class="draft--a">IG pan.yutang</a> 得到更多新的歷史小故事喔！</div>
-<div class="draft-block draft--p left"></div>
