--- a/_posts/2022-06-21-VOCUS-台灣的人力資源-4.html
+++ b/_posts/2022-06-21-VOCUS-台灣的人力資源-4.html
@@ -9,8 +9,7 @@ author: 王立第二戰研所
 ---
 
 <blockquote class="draft-block draft--blockquote">人力市場看似是總量需求，其實不是。是特定職業的技能需求度就是那麼高，又不是每個人都要當「達人」，純以做好這份工作來說，本就是天賦能力強的人有優勢，我們若否定這點，將所有技能都當成可以訓練，絕對會徹底偏掉對人力資源，以及缺工的理解。</blockquote>
-<div class="embed-block-prerender" data-type="vocus" data-url="https://vocus.cc/article/62709bcbfd89780001c4222a">台灣的人力資源（3） | 王立第二戰研所 - vocus</a></h3><span>筆者在產業上觀察到一個現象，就是人除了單純的能力外，還有多工處理這項能力。解釋成一心二用不大好，適合的說法，是「可以同一時段內顧到兩項工作以上」，或是說可以「快速釐清複雜事務，找出其執行順序，並能顧好同時段進行的工作」。 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F19cfaa9d-97b6-47e3-885c-86c2ae29107c.jpg%26width%3D1200%26sign%3D-bA-zDD1sT6kHThCzBTh-m8QRhfZEHJJYtpkFypf1AQ&width=550&sign=UGRrC4smmsfqErvUmG6W5rjNU0Q_nH0_EjNKAZujZXI"></div>
-<div class="draft-block draft--p left"></div>
+<div><h3><a href="https://vocus.cc/article/62709bcbfd89780001c4222a">台灣的人力資源（3） | 王立第二戰研所 - vocus</a></h3><span>筆者在產業上觀察到一個現象，就是人除了單純的能力外，還有多工處理這項能力。解釋成一心二用不大好，適合的說法，是「可以同一時段內顧到兩項工作以上」，或是說可以「快速釐清複雜事務，找出其執行順序，並能顧好同時段進行的工作」。 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F19cfaa9d-97b6-47e3-885c-86c2ae29107c.jpg%26width%3D1200%26sign%3D-bA-zDD1sT6kHThCzBTh-m8QRhfZEHJJYtpkFypf1AQ&width=550&sign=UGRrC4smmsfqErvUmG6W5rjNU0Q_nH0_EjNKAZujZXI"></div>
 <div class="draft-block draft--p left">人生而不平等，是無比殘酷又正確的事情，尤其在天賦上。</div>
 <div class="draft-block draft--p left">教書久了，更能體會到這道理，有人就是不用講，自己就可以跳躍思考，還每步都正確；有人努力半天到頭來，勉強維持在及格邊緣。有的人就是天生具有多項優異能力，做每件事情都不差；有的人就是每件事情都做不好，豁盡全力才把一件事情做到過關。</div>
 <div class="draft-block draft--p left">筆者現在也不想講好聽話，如果你無法認同上一段話，覺得努力必定有結果，天賦差異都可以依靠努力解決，或是透過後天教育訓練去改變……，那還是別看下去了。</div>
