--- a/_posts/2022-06-21-VOCUS-台灣的人力資源-6.html
+++ b/_posts/2022-06-21-VOCUS-台灣的人力資源-6.html
@@ -9,8 +9,7 @@ author: 王立第二戰研所
 ---
 
 <blockquote class="draft-block draft--blockquote">也就是，傳產的缺工，本質上是應該要有能力C的來當作業員，而能力C的人會覺得薪資低不願意來，或寧可去打工，所以不找外勞就補不足這個缺口。而理論上平均B的人進來做幾年可以當到管理職缺，但現實是看學歷雇人，卻因為高教擴張後學歷貶值，導致「過去B能力的學歷，現在只有C能力」，人進去後實際上能用的很少。</blockquote>
-<div class="embed-block-prerender" data-type="vocus" data-url="https://vocus.cc/article/62709c25fd89780001c423f3">台灣的人力資源（5） | 王立第二戰研所 - vocus</a></h3><span>我們以為，有些管理職的工作，或是有經驗的職位，甚至是偏中產白領、藍領職業，可以透過開放外籍人士來擔任，這是很危險的思維。正因為這些中小型企業跟工廠的門檻低，所以有些生產的技術、客戶的名單，絕對不會外流給不信任的人。 我們不能用表面的學經歷，去設想職業的替代是那麼簡單，不然歐洲引進敘利亞難民多久？讓阿拉伯移民去了幾年？為何還是一直喊缺工？ ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F0ffca2fb-f1ff-4ade-9632-d345c4cae14d.jpg%26width%3D1200%26sign%3DAJmtCpbEA0IqXAiriTI_GHQlT3qhyKkPGdCHFSWqi00&width=550&sign=2LztP2r9Je63B6HISz00TusN8Vw60h6Vq20Pd8jy3k4"></div>
-<div class="draft-block draft--p left"></div>
+<div><h3><a href="https://vocus.cc/article/62709c25fd89780001c423f3">台灣的人力資源（5） | 王立第二戰研所 - vocus</a></h3><span>我們以為，有些管理職的工作，或是有經驗的職位，甚至是偏中產白領、藍領職業，可以透過開放外籍人士來擔任，這是很危險的思維。正因為這些中小型企業跟工廠的門檻低，所以有些生產的技術、客戶的名單，絕對不會外流給不信任的人。 我們不能用表面的學經歷，去設想職業的替代是那麼簡單，不然歐洲引進敘利亞難民多久？讓阿拉伯移民去了幾年？為何還是一直喊缺工？ ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252F0ffca2fb-f1ff-4ade-9632-d345c4cae14d.jpg%26width%3D1200%26sign%3DAJmtCpbEA0IqXAiriTI_GHQlT3qhyKkPGdCHFSWqi00&width=550&sign=2LztP2r9Je63B6HISz00TusN8Vw60h6Vq20Pd8jy3k4"></div>
 <div class="draft-block draft--p left">缺工的本質是不匹配，不是真的缺人缺到爆炸，不然照道理說應該沒有失業率，顯然就不是這樣。</div>
 <div class="draft-block draft--p left">那麼，我們開放外勞，或是開放外籍白領來台有意義嗎？嗯，坦白說，筆者的看法是，會覺得開放白領較有意義的就是雙標思維。</div>
 <div class="draft-block draft--p left">我們在罵藍領階層的工作，說這些傳產老闆就是不想付夠高的薪資，或是想把教育訓練外包，才會找不到人。那白領等管理缺難道就不是？引進外籍金融人才，是當台灣相關科系訓練不出人嗎？</div>
