--- a/_posts/2022-06-21-VOCUS-活死貓之夜-貓貓病毒襲來!!.html
+++ b/_posts/2022-06-21-VOCUS-活死貓之夜-貓貓病毒襲來!!.html
@@ -41,4 +41,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/cfab7dfa-23dd-4088-a469-4c95175a2d58.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">但是《活死貓之夜》的缺點也是很淺而易見的，雖然目前劇情還在進展中，配合貓咪的習性看起來有趣，但在後續劇情發展這可能會顯得讓人疲乏，如何讓人貓大戰，讓人類不被貓咪收編這看點，就要看作者怎麼安排讓貓咪襲來的故事更有看點，而不是只是話題性。</div>
 <div class="draft-block draft--p left">《活死貓之夜》中對於貓咪科普敘述這點，我覺得喜歡貓咪或貓奴份子會看得很開心，一般人也可以享受不是噁心恐怖的殭屍視覺，而是貓貓的貓拳貓腿朝你撲來討摸摸，很可愛但會變貓咪不行。而最後會是全面清零或是病毒共存的世界？決定權似乎還是落在貓身上。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/HkBIxD8thug"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/HkBIxD8thug"></iframe></div>
