--- a/_posts/2022-06-21-PQ-台北大巨蛋沒職棒球團想打-一天租金比天母球場租整年還貴.html
+++ b/_posts/2022-06-21-PQ-台北大巨蛋沒職棒球團想打-一天租金比天母球場租整年還貴.html
@@ -16,7 +16,7 @@ author: 楊是命
 
 
 
-<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/dbc239d4-287709096_424973372970686_8339587052734289050_n.jpeg" alt="" class="wp-image-105155" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/dbc239d4-287709096_424973372970686_8339587052734289050_n.jpeg 1008w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/dbc239d4-287709096_424973372970686_8339587052734289050_n-300x213.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/dbc239d4-287709096_424973372970686_8339587052734289050_n-768x546.jpeg 768w" sizes="(max-width: 756px) 100vw, 756px" /><figcaption>台北市副市長蔡炳坤強調，歡迎職棒球團來洽詢。然而遠雄巨蛋高額的租金，恐怕不是所有球團都能承受。<br>（圖／蔡炳坤臉書）</figcaption></figure></div>
+<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/dbc239d4-287709096_424973372970686_8339587052734289050_n.jpeg" alt="" class="wp-image-105155" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/dbc239d4-287709096_424973372970686_8339587052734289050_n.jpeg 1008w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/dbc239d4-287709096_424973372970686_8339587052734289050_n-300x213.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/dbc239d4-287709096_424973372970686_8339587052734289050_n-768x546.jpeg 768w" sizes="(max-width: 756px) 100vw, 756px" /><figcaption>台北市副市長蔡炳坤強調，歡迎職棒球團來洽詢。然而遠雄巨蛋高額的租金，恐怕不是所有球團都能承受。<br>（圖／蔡炳坤臉書）</figcaption></figure></div>
 
 
 
