--- a/_posts/2022-06-21-INITIUM-早报-特朗普及其支持者曾骚扰多州选举官员-要求更改大选结果.html
+++ b/_posts/2022-06-21-INITIUM-早报-特朗普及其支持者曾骚扰多州选举官员-要求更改大选结果.html
@@ -10,7 +10,7 @@ author:
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220622-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/06/360600877099470e9156d00770f51cea.jpeg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年6月21日，美国国会，前佐治亚州选举工作人员莫斯（Shaye Moss）宣誓作证。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年6月21日，美国国会，前佐治亚州选举工作人员莫斯（Shaye Moss）宣誓作证。<span class="credit">摄：Michael Reynolds-Pool/Getty Images</span></figcaption></figure><h3>特朗普及其支持者曾骚扰多州选举官员，要求更改大选结果</h3>
-<p>美国众议院“国会骚乱”调查委员会周二举行<a href="https://www.reuters.com/world/us/us-congress-jan-6-committee-zero-pressure-over-georgia-election-results-2022-06-21/">第四场公开听证会</a>，来自多个州的选举官员表示，他们由于拒绝推翻前总统特朗普2020大选在该州败选结果，遭到特朗普本人及起大批支持者威胁、侮辱和骚扰。</p>
+<p>美国众议院“国会骚乱”调查委员会周二举行<a href="https://www.reuters.com/world/us/us-congress-jan-6-committee-zero-pressure-over-georgia-election-results-2022-06-21/">第四场公开听证会</a>，来自多个州的选举官员表示，他们由于拒绝推翻前总统特朗普2020大选在该州败选结果，遭到特朗普本人及其大批支持者威胁、侮辱和骚扰。</p>
 <p>亚利桑那州众议长鲁斯蒂·鲍尔斯（Rusty Bowers）表示，他们收到超过2万封电邮和上万条语音邮件及短信，导致办公室因信息过载无法正常工作。</p>
 <p>鲍尔斯还表示，特朗普本人及其律师朱利安尼（Rudy Giuliani）、顾问伊斯曼（John Eastman）曾与她通话，要求她拒绝承认特朗普在该州败选结果。</p>
 <p>调查委员会播放了特朗普及其亲信要求州政府官员拒绝承认选举结果的录音和录像记录。</p>
