--- a/_posts/2022-06-21-PQ-中國第三艘航空母艦福建號下水-配有電磁彈射系統引關注.html
+++ b/_posts/2022-06-21-PQ-中國第三艘航空母艦福建號下水-配有電磁彈射系統引關注.html
@@ -16,7 +16,7 @@ author: 蔡侯塞
 
 
 
-<p>新華社報導說，福建號滿載排水量為 8 萬噸。然而，在美國國會 3 月的報告中，分析人士表示，衛星圖像顯示福建號的排水量約為 10 萬噸，跟美國海軍航空母艦的排水量相似。值得注意的是，它是<strong>第一艘中國航空母艦搭載發射戰機用的電磁彈射器（electromagnetic catapult），這意味著中國能夠發射更多種的重型飛機。較舊的航空母艦僅配置滑跳起飛甲板，使用駕駛艙的輕微傾斜來提供升力，但這也限制艦上起飛飛機的尺寸和重量。</strong></p>
+<p>新華社報導說，福建號滿載排水量為 8 萬噸。然而，在美國國會 3 月的報告中，分析人士表示，衛星圖像顯示福建號的排水量約為 10 萬噸，跟美國海軍航空母艦的排水量相似。值得注意的是，它是<strong>第一艘中國航空母艦搭載發射戰機用的電磁彈射器（electromagnetic catapult），這意味著中國能夠發射更多種的重型飛機。較舊的航空母艦僅配置滑跳起飛甲板，透過前方甲板的輕微傾斜來提供升力，但這也限制艦上起飛飛機的尺寸和重量。</strong></p>
 
 
 
