Update VOCUS 2022-06-23 patch

--- a/_posts/2022-06-22-VOCUS-康寶藍-向巨蟹座致敬.html
+++ b/_posts/2022-06-22-VOCUS-康寶藍-向巨蟹座致敬.html
@@ -8,4 +8,44 @@ tags: blog
 author: 私の部屋：世界、歷史、人生的万華鏡
 ---
 
-<p><br></p>
+<img src="https://images.vocus.cc/f490f279-5dda-4ae3-b704-384c2fb3e64e.jpg">
+<p>海天一色的艷陽夏日，卡利亞里（Cagliari）的海灘卻依然讓人心曠神怡，除了有清爽的水果冰淇淋，更有清涼的彩色比基尼……可說是一場滿足了視覺與味覺的饗宴，一個回眸、一個彎身，古銅色的日曬吻痕，發人遐想的危險地帶，隱約帶著深不可測的挑逗，是性感？還是驕傲？恐怕連尼普頓（Neptunus）都只能笑而不語。</p>
+<p>快步閃過陽光跟白雲的熱情嬉戲，躲入窄巷內的老派咖啡館，撲鼻而來的天然烘豆香，匠人正觀看著義乙足球聯賽卡利亞里（Cagliari Calcio）與熱那亞（Genoa C.F.C.）的交手，左手操作著骨董般的機器，右手則跟著比賽節奏振臂高揮，不由得使人想起了《維特魯威人》（L'uomo vitruviano）……是，達文西（Leonardo da Vinci），他可是義大利老鄉啊。</p>
+<h3>「Con Panna！」</h3>
+<p>不待服務生上前招呼，一位帶著深邃目光，體格結實的中年大叔，剛停好他的紅色Vespa T5，馬上就一屁股坐上吧檯前的木頭圓凳，有些年紀的椅子彷彿「哀號」了幾聲，跟低沉的「康寶藍」一同傳入了右邊的耳朵。</p>
+<p><b>「Ciao！今天是6月22日呢，巨蟹座的第一天！」</b></p>
+<p>下意識看了一下左腕，手錶……啊！該死！好像放在民宿忘了戴出來。做了一個莫可奈何的表情，我不太想繼續這個無聊的話題（推銷占卜嗎？）</p>
+<p><b>「Giuseppe Mazzini，今天是他的生日。你知道是誰嗎？」</b></p>
+<img src="https://images.vocus.cc/04001850-9619-4b62-99e1-f59bda2ca4b4.jpg">
+<p>說真的，不用自誇，在朋友的心目中，我人雖然其貌不揚，但個性算是隨和的，可最大的缺點，或者是底線吧，就是非常討厭被陌生人挑釁！而且，哼哼……</p>
+<blockquote>「『有關講權利的人和講責任的人，他們之間的區別，就前者來說，一旦獲得了個人的權利，便失去了動力，再也不想繼續努力了；而後者的工作，只有等到生命結束時才會停止！』」</blockquote>
+<p><b>「喔，想不到馬志尼的治世金句你也清楚啊，呵呵……」</b></p>
+<p>鮮奶油點綴的Con Panna，對映著見底的第二杯Espresso，天花板的風扇，地中海的熱浪，兩個無聊男子的「對峙」？說也奇怪，總覺得有種《Per un pugno di dollari》（荒野大鏢客）的氛圍……「We can fight！」，瞧！連內心的點唱機也自動奏起了主題配樂。</p>
+<blockquote>「是，6月22日的代表性壽星，是義大利『建國三傑』之一，與加富爾、加里波底齊名的馬志尼（1805 - 1872）生日，他也列名巨蟹座的偉人之林。」</blockquote>
+<blockquote>「作為義大利百姓永遠推崇的民族英雄，誕生於義北熱那亞，本業是律師，同時也在寫作方面滿懷熱情的馬志尼，年少時因為看見『美國獨立運動』和『法國大革命』的成功與其掀起的火花，故對於當年尚處各自分裂、遭他國勢力割據的義大利城邦國，燃起了一股他日應當建構起完整、統一之全新共和國政體的渴望與夢想。」</blockquote>
+<blockquote>「西元1830年，年僅25歲的馬志尼獲准加入採秘密結社型態的民族主義政黨，也就是以仿『共濟會』組織而來的『燒炭黨』（Carbonari）；活躍於西元十九世紀中葉的『燒炭黨』，其主要任務就是以建立起自由、統一且獨立的新義大利為宗旨。而黨員們所信奉的口號，也正是義大利邁向建國之路的四個要素……</blockquote>
+<blockquote>『單一、自由、獨立、共和。』」</blockquote>
+<h3>「Tiramisù！」</h3>
+<p>，桌上多了一大塊提拉米蘇。笑起來有酒窩的服務生偷偷指了一指中年大叔。（這已經是今天繼早餐、午餐後，第三塊的「增肥惡魔」了）</p>
+<blockquote>「很快的，馬志尼動身前往馬賽（Marseille），在當地的義大利裔移民中，主持了『青年義大利黨』（La Giovine Italia）的創設，以追求統一義大利，建立自由體制之共和國作為號召，更以「天主與人民」（God and the People）作為政黨的座右銘。」</blockquote>
+<blockquote>「馬志尼再接再厲，緊接著又公開宣示了『恢復古羅馬光榮』的理念，追求義大利民族復興與正視在地傳統文化之訴求！面臨著當時歐洲大陸許多地方仍處於龐大異族帝國的統治，自身的族語與傳統習俗遭到埋沒與打壓，馬志尼的登高一呼，隨即引起相當程度的反饋與相應，更直接影響了不少同性質政黨的崛起，如『青年德意志黨』、『青年波蘭黨』等。」</blockquote>
+<blockquote>「歷經數十載的努力與奮鬥，艱辛熬過並取勝多次激烈的關鍵會戰，來自薩丁尼亞的伊曼紐二世（Vittorio Emanuele II），終於在西元1861年時，力退群雄，逐一削弱外來的政治或是軍事力量，控制了義大利大半的領土。伊曼紐二世也趁勝追擊，對外聲稱將建構一個新而統一的義大利王國。而他隨後也被義國臨時議會正式任命為義大利的新任國王，並且將首都定為羅馬。」</blockquote>
+<blockquote>「然而……」</blockquote>
+<p>欠了欠身，「雪山咖啡」……是，康寶藍也（如願）端上來了。</p>
+<img src="https://images.vocus.cc/5c03bd9e-e12a-4307-864e-580cad409bec.jpg">
+<blockquote>「對馬志尼而言，建立『義大利王國』的做法其實並非是他所認可的最佳選項！因為他希望原本分裂的義大利城邦得以集結、組織成一個真正還政於民，以人民為依歸，類似美國的『共和國』國體，而不是另外扶植一批新興的貴族權貴，繼續把持政治核心與各項政經優勢！所以，貴為建國有功者的馬志尼，拒絕接受任何義大利王國安排的高官職位，反而回到民間，義無反顧地持續推動和傳揚共和制的理念。」</blockquote>
+<blockquote>「即使被當權者稱為『刺客之首』，也曾經起義對抗伊曼紐二世的治權合法性，但被捕後又獲得特赦釋放的馬志尼始終不改其志，提倡出更為宏觀與遠大的……」</blockquote>
+<blockquote>「『由亞德里亞海到阿爾卑斯山的自由！』（Free from the Alps to the Adriatic！）」</blockquote>
+<p>望著咖啡館的灰牆，斑駁滄桑，但由「青年義大利」轉型為「義大利共和黨」（Partito Repubblicano Italiano）的綠色樹葉圖章，依然讓人印象深刻。</p>
+<h3>「『人民願意承擔責任，比接受權利還要重要！』，太好了，Evviva！來！我敬你一杯！巨蟹座萬歲！義大利萬歲！」</h3>
+<p><b>「萬歲！萬歲！」</b></p>
+<p>但怎麼用咖啡乾杯呢？不是應該……</p>
+<p>滿頭大汗地捱過陽光跟白雲之間的熱情嬉戲，好不容易躲入捷運站旁的速食店，唉，上次用積分換得的咖啡券居然擺到過期而無法兌換了。摸了一下皮夾現時的「重量」後，只能點一杯零卡可樂（貪婪著咬著冰塊）。</p>
+<p>海天一色的艷陽夏日，卡利亞里（Cagliari）的海灘……原來、原來這都是一場白日夢啊。</p>
+<p><b>「咦……這甚麼？」</b></p>
+<p>一包即溶式的義式炭燒咖啡，靜靜地躺在襯衫的口袋裡，上頭似乎有著剛落筆的字跡：Viva Italia！（義大利萬歲！）</p>
+<p>圖文來源、一併致謝：</p>
+<p><a href="https://it.wikipedia.org/wiki/Giuseppe_Mazzini">https://it.wikipedia.org/wiki/Giuseppe_Mazzini</a></p>
+<p><a href="https://www.planetware.com/tourist-attractions-/cagliari-i-sa-ca.htm">https://www.planetware.com/tourist-attractions-/cagliari-i-sa-ca.htm</a></p>
+<p><a href="https://www.wantedinmilan.com/news/made-in-italy-icon-vespa-celebrates-75-years.html">https://www.wantedinmilan.com/news/made-in-italy-icon-vespa-celebrates-75-years.html</a></p>
+<p><a href="https://www.jacobscoffeehousedc.com/product/caf-conpana/8">https://www.jacobscoffeehousedc.com/product/caf-conpana/8</a></p>
