--- a/_posts/2022-06-23-PQ-行政不中立爭議-黃珊珊拒備詢-北市議員轟藐視議會.html
+++ b/_posts/2022-06-23-PQ-行政不中立爭議-黃珊珊拒備詢-北市議員轟藐視議會.html
@@ -16,7 +16,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0bd12b74-1.jpg" alt="" class="wp-image-105366" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0bd12b74-1.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0bd12b74-1-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0bd12b74-1-768x576.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>黃珊珊考察士林區市場，被爆帶領民眾黨議員參選人掃街拜票，甚至出動北市府產業發展局、市場處官員陪同／圖：台北市議員王欣儀質詢簡報。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0bd12b74-1.jpg" alt="" class="wp-image-105366" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0bd12b74-1.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0bd12b74-1-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/0bd12b74-1-768x576.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>黃珊珊考察士林區市場，被爆帶領民眾黨議員參選人掃街拜票，甚至出動北市府產業發展局、市場處官員陪同／圖：台北市議員王欣儀質詢簡報。</figcaption></figure></div>
 
 
 
