--- a/_posts/2022-06-23-INITIUM-端开麦-非洲人举牌-那些原本不该隐形的中非种族问题.html
+++ b/_posts/2022-06-23-INITIUM-端开麦-非洲人举牌-那些原本不该隐形的中非种族问题.html
@@ -18,7 +18,7 @@ author: 端传媒 编辑部
 
 <p><strong>欢迎在 <a href="https://player.soundon.fm/p/a8004390-2408-4688-9816-2b106df67151">SoundOn</a>、<a href="https://podcast.kkbox.com/channel/KlctAqx6AIr-G2S_iU">KKBOX</a>、<a href="https://open.spotify.com/show/6wmjViv2qxneOD7uoU3Mwb">Spotify</a>、<a href="https://apple.co/3vDYCpD">Apple Podcast</a>、<a href="https://pca.st/sdwgbzjp">Pocket cast</a>、<a href="https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkcy5zb3VuZG9uLmZtL3BvZGNhc3RzL2E4MDA0MzkwLTI0MDgtNDY4OC05ODE2LTJiMTA2ZGY2NzE1MS54bWw">Google Podcast</a> 平台上关注我们喔！</strong></p>
 <p>中文世界对非洲人举牌的种种短视频、短片绝不陌生，端曾经报道过这种现象，并试图讨论和审视其生产及传播过程。在BBC非洲之眼新一集纪录片Racism for Sale推出之后，举牌短片又有了更多背景被揭露，除了产业买卖，还涉及歧视、虐待和剥削。</p>
-<p>种族议题多数被掩盖在中文世界的其他议题下面，暗自涌动。对长期生活在单一族群地区的人来说，非洲、非洲人和非洲文化如果不是切身的议题，为何中国电视银幕上又屡屡出现对肤色不友善的洗涤广告，涂黑脸的华人喜剧演员，遍布网络的非洲人举牌迷因？</p>
+<p>种族议题多数被掩盖在中文世界的其他议题下面，暗自涌动。对长期生活在单一族群地区的人来说，非洲、非洲人和非洲文化如果不是切身的议题，为何中国电视荧幕上又屡屡出现对肤色不友善的洗涤广告，涂黑脸的华人喜剧演员，遍布网络的非洲人举牌迷因？</p>
 <p>这一期，我们邀请研究近现代中国对非洲种族话语的比较文学博士生/译者黄琨，在非洲任教的人类学博士陈量一起讨论曾经藏在暗处，如今越来越显性的中非种族议题。</p>
 <p><strong>节目内容</strong>：</p>
 <p><br>00:00 被出售的种族主义
