--- a/_posts/2022-06-25-PQ-施又熙-接住別人的那雙手-淺談憂鬱與自殺.html
+++ b/_posts/2022-06-25-PQ-施又熙-接住別人的那雙手-淺談憂鬱與自殺.html
@@ -16,7 +16,7 @@ author: 施 又熙
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/3d916665-maxresdefault-1024x576.jpg" alt="" class="wp-image-105616" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/3d916665-maxresdefault-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/3d916665-maxresdefault-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/3d916665-maxresdefault-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/3d916665-maxresdefault.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>2022年相繼自縊身亡的日本藝人上島竜兵（上島龍兵）與渡邊裕之。<br>圖／占い師けんけんTV</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/3d916665-maxresdefault-1024x576.jpg" alt="" class="wp-image-105616" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/3d916665-maxresdefault-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/3d916665-maxresdefault-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/3d916665-maxresdefault-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/3d916665-maxresdefault.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>2022年相繼自縊身亡的日本藝人上島竜兵（上島龍兵）與渡邊裕之。<br>圖／占い師けんけんTV</figcaption></figure></div>
 
 
 
